# Minecraft-Chocolate-ChatGPT-Plugin

./: .replit  README.md  error.py  install.bat  install.sh  main.py  openapi.yaml  pyproject.toml  requirements.txt
.well-known/: ai-plugin.json
