[tool.poetry]
name = "minecraft-chocolate"
version = "1.0.0"
description = "ChatGPT Plugin for recomendations about Minecraft mods and modpacks. Uses Modrinth API"
authors = ["Peter1169 <peter1169tech@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
fastapi = "^0.94.1"
starlette = "^0.26.1"
pydantic = "^1.9.1"
uvicorn = "^0.22.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
requests = "^2.31.0"
tiktoken = "^0.3.3"
jsonschema = "^4.17.3"
python-multipart = "^0.0.6"
httpx = "^0.23.0"
aiofiles = "^23.1.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"