[tool.poetry]
name = "minecraft-chocolate"
version = "1.0.0"
description = "ChatGPT Plugin for recomendations about Minecraft mods and modpacks. Uses Modrinth API"
authors = ["Peter1169 <peter1169tech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.94.1"
beautifulsoup4 = "^4.12.2"
uvicorn = "^0.22.0"
tiktoken = "^0.3.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"